-------------------------------------
	4.1-2
-------------------------------------
Added Stop options to VM list context menu.

-------------------------------------
	4.1-1b	2011-8-1
-------------------------------------
Added snapshot thumbnail and full image link when viewing snapshot
details of an online snapshot.

Added context menus for snapshots.

Minor UI changes.

Fixed page fusion setting bug for people running VirtualBox in a
32-bit OS with a 64-bit processor.
http://code.google.com/p/phpvirtualbox/issues/detail?id=347

-------------------------------------
	4.1-1	2011-8-1
-------------------------------------
Upgraded jquery-ui to 1.8.14

Numerous translation bug fixes.

VM settings are now available while VM is running. Some settings
can be modified.

Minor UI changes.
	
Fixed bug that would activate all configured USB filters when
saving a VM.

Implemented overwriting of existing file in appliance export
wizard.

Fixed bug in IE that would not allow for the entry of internal
network names in VM settings.

Fixed Clone VM wizard bug that would force the selection of
"Current machine and all child states."

Removed "Current machine and all child states" option from Clone
VM wizard as it is unsupported by VirtualBox at this time.

Fixed display bug in VM log viewer when pressing the Refresh
button.

Snapshots tab now prompts to take a new snapshot when attempting to
restore a snapshot while VM is in a (changed) Saved state.

Added license agreement dialog when importing appliances that have
a license.

Added a check for phpVirtualBox <-> VirtualBox versions.

Added "Restore Defaults" button and functionality to appliance
import wizard.

Added Page Fusion setting in VM Settings -> System -> Motherboard
when $enableAdvancedConfig is set in config.php.

Fixed bug that would not allow a disk to be set to Multi-attach.

Fixed bug with PHP versions < 5.2 that would not enable network
cards of VMs when saving VM settings.